--- a/index.html
+++ b/index.html
@@ -87,8 +87,14 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>My name is Kumar Abhishek.I want to be a software developer.I am Pursing Master Of Computer Application(MCA) From Maulana Azad National Institute of Technology Bhopal  
-		            .I like coding and i like to solve competitive problem with optimize solution.</p>
+		            <p>My name is Kumar Abhishek.I am a software developer.
+				    I am currently working at Genpact  as a software developer for Intern + Full Time .
+				    I like coding and i like to solve competitive problem with optimize solution.
+                                    Implement is my cup of tea and learning new things is my greatest curiousity. 
+				    I can't sleep until I solve all the bugs. I have always made an impact in projects with my fast implementation process and good skills.
+				    I can work on different technologies, database and programming languages.
+				    My basics are strong and I believe in hardwork combined with the flavour of smart work.
+				    Most important thing is I love this job and always push my limits to become more better.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Kumar Abhishek</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>April 14, 1997</span></li>
@@ -206,6 +212,15 @@
 	    					<div class="icon d-flex align-items-center justify-content-center">
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
+							<div class="text pl-3">
+		    					<span class="date">14-Jan-2022-present</span>
+		    					<h2>Genpact Private Limited</h2>
+		    					<span class="position">Software Developer</span>
+		    					<p>I have joined this company for Intern+Full Time and feel that this is the good place to give a kick start to your career.</p>
+							<p> Genpact (NYSE: G) is a global professional services firm that makes business transformation real. Led by our purpose -- the relentless pursuit of a world that works better for people -- we drive digital-led innovation and digitally enabled intelligent operations for our clients.</p>
+		    					<p>Good Infrastructure, amazing team member,team lead and also very supportive seniors</p>
+								
+		    				</div>
 					    	<div class="text pl-3">
 		    					<span class="date">5-Dec-2020 To 18-Jan-21</span>
 		    					<h2>A2infotech Private Limited</h2>
