--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     			<div class="col-md-6 col-lg-6 d-flex">
     				<div class="img-about img d-flex align-items-stretch">
     					<div class="overlay"></div>
-						<img src="images/my25.jpg" alt="Site Logo" >
+						<img src="images/pic.jpg" alt="Site Logo" >
 	    				<!-- <div class="img d-flex align-self-stretch align-items-center" style="background-image:url(images/my_pic.jpeg);">
 	    				</div> -->
     				</div>
