--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
 							<div class="text pl-3">
 		    					<span class="date">14-Jan-2022 TO 30-June-2022 </span>
 		    					<h2>Genpact Private Limited</h2>
-		    					<span class="position">Software Developer</span>
-		    					<p>I have joined this company for Intern Time and feel that this is the good place to give a kick start to your career.</p>
+		    					<span class="position">Software Developer(Intern)</span>
+		    					<p>I have joined this company for Intern  and feel that this is the good place to give a kick start to your career.</p>
 							<p> Genpact (NYSE: G) is a global professional services firm that makes business transformation real. Led by our purpose -- the relentless pursuit of a world that works better for people -- we drive digital-led innovation and digitally enabled intelligent operations for our clients.</p>
 		    					<p>Good Infrastructure, amazing team member,team lead and also very supportive seniors</p>
 								<a href="https://drive.google.com/file/d/1-U3mVsINp7iGYDB0HX_8t49bBR3YjjQB/view?usp=sharing"><h4 class="date" >View Certificate</h4></a>
